MD Settings: Remove remnants of obsolete Full Screen top-level category.

Those bits should have been removed by https://codereview.chromium.org/1895113002.

An assertion error was thrown by either of the following
1) Navigating to chrome://md-settings/siteSettings/fullscreen, or
2) Triggering a force-rendering of the subpage in question (via search).

BUG=629665
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:closure_compilation

Review-Url: https://codereview.chromium.org/2163123002
Cr-Commit-Position: refs/heads/master@{#406640}

Former-commit-id: 474d850f3c46faa21c3de38fb068734dc52247b2